infra/k3s_migration/infra-live/applications/observability/tracing/tempo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tempo
  namespace: tempo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # 關鍵：告訴 Argo CD 如果發現舊的同名資源（比如 Chart 殘留的），請直接替換掉它
    argocd.argoproj.io/sync-options: Replace=true

spec:
  ingressClassName: "nginx"
  rules:
  - host: tempo.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo-query-frontend
            port:
              number: 3100
